# deadbeef

./: .clang-format  .gitignore  .gitmodules  .travis.yml  .vimrc  AUTHORS  CONTRIBUTING  CONTRIBUTING.md  COPYING  ChangeLog  INSTALL  ISSUE_TEMPLATE.md  Jamfile  Makefile.am  PKGBUILD  PORTABLE_VERSION  README  README.md  README.transifex  Tests.mk  about.txt  acinclude.m4  autogen.sh  bootstrap.sh  buffered_file_writer.c  buffered_file_writer.h  callbacks.c  callbacks.h  cdumb.c  cdumb.h  cflac.c  cflac.h  cgme.c  cgme.h  cmod.c  cmod.h  cmp3.c  cmp3.h  cocoautil.h  cocoautil.m  (+142 more)
dumb/: Jamfile  Makefile.am
dumb/dumb-0.9.3/: Makefile  licence.txt
dumb/dumb-kode54/: Makefile.am  bootstrap  configure.in
icons/: Makefile.am  deadbeef-icon.rc  deadbeef.idraw  deadbeef.rc  make_png_icons.pl
libsidplay2/sidplay-libs-2.1.0/: Jamfile  Makefile.am  Makefile.in
plugins/aac/: COPYING  Makefile.am  aac.c  aac_decoder_faad2.c  aac_decoder_faad2.h  aac_decoder_fdk.c  aac_decoder_fdk.h  aac_decoder_protocol.h  aac_decoder_wrap.c  aac_parser.c  aac_parser.h
plugins/adplug/: COPYING  Makefile.am  adplug-db.cpp  plugin.c
plugins/alac/: COPYING  Makefile.am  alac.c  alac_plugin.c  alac_plugin.cpp  alac_plugin.h  decomp.h  demux.c  demux.h  plugindef.c  stream.c  stream.h
plugins/artwork/: COPYING  Makefile.am  albumartorg.c  albumartorg.h  applesupport.h  applesupport.m  artwork.c  artwork.h  artwork_flac.c  artwork_flac.h  artwork_imlib2.c  artwork_imlib2.h  artwork_internal.c  artwork_internal.h  artwork_jpeg.c  artwork_jpeg.h  artwork_ogg.c  artwork_ogg.h  artwork_opus.c  artwork_opus.h  artwork_png.c  artwork_png.h  base64.c  cache.c  cache.h  coverinfo.c  coverinfo.h  escape.c  escape.h  file_utils.c  file_utils.h  lastfm.c  lastfm.h  musicbrainz.c  musicbrainz.h  ogg_shared.c  ogg_shared.h  wos.c  wos.h
plugins/artwork-legacy/: COPYING  Makefile.am  artwork.c  artwork.h  artwork_internal.c  cache.c  cache.h  escape.c  escape.h
plugins/converter/: COPYING  Makefile  Makefile.am  callbacks.c  callbacks.h  converter.c  converter.glade  converter.gladep  converter.h  convgui.c  interface.c  interface.h  support.c  support.h
plugins/dca/: COPYING  Makefile.am  README  bitstream.c  convert2s16.c  dcadec.c  dcaplug.c  extract_dca.c  gettimeofday.c  parse.c
plugins/demac/: Makefile.am  demac.c
plugins/dumb/: COPYING  Makefile  Makefile.am  cdumb.c  cdumb.h  modloader.cpp  modloader.h  unmo3.h  unrealfmt.cpp  unrealfmtdata.cpp
plugins/emidi/: Makefile.am  emidi.cpp  emidi.h  plugin.c  readme.txt
plugins/ffap/: COPYING  Makefile.am  ffap.c
plugins/flac/: COPYING  Makefile.am  flac.c
plugins/gme/: COPYING  Makefile.am  cgme.c  gmewrap.cpp  gmewrap.h
plugins/gtkui/: COPYING  Makefile.am  actionhandlers.c  actionhandlers.h  actions.c  actions.h  callbacks.c  callbacks.h  clipboard.c  clipboard.h  compile  converter.c  converter.h  convgui.c  convgui.h  coverart.c  coverart.h  ctmapping.c  ctmapping.h  ddb_splitter.c  ddb_splitter.h  ddb_splitter_size_mode.c  ddb_splitter_size_mode.h  ddbcellrenderertextmultiline.c  ddbcellrenderertextmultiline.h  ddbcellrenderertextmultiline.vala  ddbequalizer.c  ddbequalizer.h  ddbequalizer.vala  ddblistview.c  ddblistview.h  ddbseekbar.c  ddbseekbar.h  ddbseekbar.vala  ddbtabstrip.c  ddbtabstrip.h  ddbvolumebar.c  ddbvolumebar.h  deadbeef.glade  deadbeef.gladep  (+81 more)
plugins/guitest/: Makefile.am  actions.c  ctmapping.c  ctmapping.h  ddbcellrenderertextmultiline.h  ddbequalizer.c  ddbequalizer.h  ddbseekbar.c  ddbseekbar.h  ddbtabstrip.c  ddbtabstrip.h  ddbvolumebar.c  ddbvolumebar.h  deadbeef.glade  drawing.h  dspconfig.c  dspconfig.h  eq.c  eq.h  fileman.c  gdkdrawing.c  gtkui.c  gtkuigl.c  interface.c  interface.h  mainplaylist.h  namedicons.c  plcommon.c  plcommon.h  pluginconf.c  pluginconf.h  prefwin.c  progress.h  retina.m  search.h  tagwritersettings.c  tagwritersettings.h  timeline.c  timeline.h  trkproperties.h  (+3 more)
plugins/hotkeys/: COPYING  Makefile.am  actionhandlers.c  actionhandlers.h  hotkeys.c  hotkeys.h  keysyms.inc  parser.c
plugins/liboggedit/: Makefile.am  oggedit.c  oggedit.h  oggedit_art.c  oggedit_flac.c  oggedit_internal.c  oggedit_internal.h  oggedit_opus.c  oggedit_utils.c  oggedit_vorbis.c
plugins/listenbrainz/: COPYING  Makefile.am  listenbrainz.c
plugins/lyrics/: COPYING  Makefile.am  lyrics.c  support.h
plugins/medialib/: COPYING  Makefile.am  medialib.c  medialib.h  medialibcommon.c  medialibcommon.h  medialibdb.c  medialibdb.h  medialibfilesystem.h  medialibfilesystem_inotify.c  medialibfilesystem_mac.c  medialibfilesystem_mac.m  medialibfilesystem_stub.c  medialibscanner.c  medialibscanner.h  medialibsource.c  medialibsource.h  medialibstate.c  medialibstate.h  medialibtree.c  medialibtree.h  scriptable_tfquery.c  scriptable_tfquery.h
shared/: Makefile.am  README  ctmap.c  ctmap.h  cueutil.c  cueutil.h  deletefromdisk.c  deletefromdisk.h  eqpreset.c  eqpreset.h  growableBuffer.c  growableBuffer.h  mp4tagutil.c  mp4tagutil.h  parser.h  pluginsettings.c  pluginsettings.h  tftintutil.c  tftintutil.h  trkproperties_shared.c  trkproperties_shared.h
shared/analyzer/: Makefile.am  analyzer.c  analyzer.h
shared/filereader/: Makefile.am  filereader.c  filereader.h
shared/mp4p/: COPYING  README  mp4p.h  mp4patomdata.c  mp4patomdata.h
shared/mp4parser/: mp4p.c  mp4p.h  mp4parser.c  mp4parser.h  mp4patomdata.c  mp4patomdata.h  mp4pfile.c  mp4pfile.h
shared/scope/: Makefile.am  scope.c
shared/scriptable/: Makefile.am  scriptable.c  scriptable.h  (+6 more)
sidplay-libs-2.1.0/: Jamfile  Makefile.am  configure.ac
src/: Makefile.am  actionhandlers.c  actionhandlers.h  actionhelp.c  actionhelp.h  buffered_file_writer.c  buffered_file_writer.h  cocoautil.h  cocoautil.m  conf.c  conf.h  coreplugin.c  coreplugin.h  cueutil.c  cueutil.h  decodedblock.c  dsp.c  dsp.h  dsppreset.c  dsppreset.h  escape.c  escape.h  fft.c  fft.h  handler.c  handler.h  junklib.c  junklib.h  logger.c  logger.h  main.c  messagepump.c  messagepump.h  metacache.c  metacache.h  moduleconf.h  playlist.c  playlist.h  playmodes.h  playqueue.c  (+34 more)
(+4429 files in other folders)
